--- a/widget/game.html
+++ b/widget/game.html
@@ -28,10 +28,12 @@
     </div>
 
 
+    <!-- build:bundleJSFiles  -->
     <script src="js/arrayEnhancements.js"></script>
     <script src="js/game.js"></script>
     <script src="js/gameUI.js"></script>
     <script src="js/scoreboard.js"></script>
+    <!-- endbuild -->
     <script src="../../../scripts/buildfire/services/notifications/pushNotifications.js"></script>
 
     <script>
