--- a/widget/index.html
+++ b/widget/index.html
@@ -42,7 +42,7 @@
     <script src="js/scoreboardUI.js"></script>
     <script>
 
-
+        buildfire.appearance.titlebar.hide();
         var scoreboard = new buildfire.gamify.Scoreboard("scoreboard");
         scoreboard.getScoreboard(function(e,b){
             if(e)
