--- a/widget/game.html
+++ b/widget/game.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/game.css">
     <meta name="buildfire" content="disableTheme">
-    <script src="../../../scripts/buildfire.js"></script>
+    <script src="../../../scripts/buildfire.min.js"></script>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -32,8 +32,8 @@
     <script src="js/arrayEnhancements.js"></script>
     <script src="js/game.js"></script>
     <script src="js/gameUI.js"></script>
-    <script src="js/scoreboard.js"></script>
     <!-- endbuild -->
+    <script src="../../../scripts/buildfire/services/gamify/scoreboard.min.js"></script>
     <script src="../../../scripts/buildfire/services/notifications/pushNotifications.js"></script>
 
     <script>
@@ -65,7 +65,6 @@
 
     </script>
 
-<script src="../../../scripts/buildfire/services/notifications/pushNotifications.js"></script>
 
 </body>
 </html>
