--- a/widget/index.html
+++ b/widget/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/scoreboard.css">
     <meta name="buildfire" content="disableTheme">
-    <script src="../../../scripts/buildfire.js"></script>
+    <script src="../../../scripts/buildfire.min.js"></script>
     <link rel="stylesheet" href="css/main.css">
 
 </head>
@@ -38,7 +38,7 @@
 
     <button id="btnPlay" onclick="location='game.html'">Play</button>
 
-    <script src="js/scoreboard.js"></script>
+    <script src="../../../scripts/buildfire/services/gamify/scoreboard.min.js"></script>
     <script src="js/scoreboardUI.js"></script>
     <script>
 
